# gnome-do-spotify

./: Makefile.am  README.md  Spotify.mdp  Spotify.mds
Resources/: Spotify.addin.xml
src/: SpAction_Next.cs  SpAction_Pause.cs  SpAction_Play.cs  SpAction_PlayPause.cs  SpAction_Previous.cs  SpAction_Stop.cs  SpDBus.cs  SpItemSource.cs
